# expense-tracker-django

./: .gitignore  README.md  expense_generator.py  generate_sample_data.py  pyproject.toml  superuser.py
accounts/: urls.py  views.py
accounts/templates/registration/: login.html  register.html
expense_tracker/: settings.py  urls.py
expenses/: forms.py  models.py  urls.py  views.py
expenses/migrations/: 0001_initial.py  0002_alter_expenses_category.py  0003_expenses_owner.py  0004_alter_expenses_amount.py
expenses/templates/expenses/: base.html  delete_expense.html  expense.html  expenses.html  index.html  new_expense.html  update_expense.html
users/: apps.py  urls.py  views.py
users/templates/registration/: login.html  register.html
