[project]
name = "expense-tracker-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-extensions>=4.1",
    "django-stubs>=6.0.3",
    "factory-boy>=3.3.3",
    "faker>=40.15.0",
    "ipython>=9.13.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.3",
]
